chore: support esm

--- a/example/index.html
+++ b/example/index.html
@@ -31,7 +31,7 @@
             
         </pre>
     </div>
-    <script src="./modest-abtest.js"></script>
+    <script src="./modest-abtest.iife.js"></script>
     <script>
         var abtest = new ABTest('abtestAppSymbol',[{
             layer_id:'layerSymbol',
