--- a/example/index.html
+++ b/example/index.html
@@ -13,12 +13,10 @@
     <div>
         <h2>AB Test</h2>
         <pre>
-            var abtest = new ABTest('abtestAppSymbol',[{
-                layer_id:'layerSymbol',
-                ref_exp_id:0,
-                ref_exp_data:'planZero',
+            var abtest = new ABTest('appId',[{
+                layer_id:'layerId',
                 version:1,
-                hit:0.5,
+                hit:1,
                 exp_set:[
                     {id:1,weight:0.5,data:'planA'},
                     {id:2,weight:0.5,data:'planB'}
