--- a/example/index.html
+++ b/example/index.html
@@ -16,8 +16,8 @@
               version:1,
               hit:1,
               exp_set:[
-                  {id:1,weight:0.5,data:'planA'},
-                  {id:2,weight:0.5,data:'planB'}
+                  {id:"1",weight:0.5,data:'planA'},
+                  {id:"2",weight:0.5,data:'planB'}
               ]
           }]);
       </pre>
